# dp3

./: .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  Api.py  LICENSE  Makefile  Pipfile  README.md  Record.py  SQLiteWrapper.py  __init__.py  docker-compose.test_example.yml  docker-compose.yml  index.html  index.md  llms.txt  macros.py  mkdocs.yml  new_task.json  objects.inv  pyproject.toml  receiver.py  record.py  requirements.deploy.txt  requirements.dev.txt  requirements.doc.txt  requirements.scripts.txt  requirements.txt  setup.py  sitemap.xml  task.py  wsgi.py
.github/workflows/: deploy.yml  lint.yml  release.yml  tests.yml
api/: index.html  index.md  main.py  receiver.py  task.py  wsgi.py
api/internal/: config.py  dp_logger.py  helpers.py  models.py
api/routers/: control.py  entity.py  root.py
api/tests/: common.py  test_api.py  test_get_history.py  test_get_value.py  test_probability.py  test_push_multiple.py  test_push_single.py  test_push_task.py
architecture/: index.html  index.md
common/: config.py  utils.py
config/: README.md  api.yml  attributes_specification.yml  common.yml  control.yml  database.yml  event_logging.yml  history_manager.yml  processing_core.yml  snapshots.yml  updater.yml
config/db_entities/: example.yml
config/modules/: test_module.yml
configuration/: index.html  index.md
configuration/api/: index.html  index.md
configuration/control/: index.html  index.md
configuration/database/: index.html  index.md
configuration/db_entities/: index.html  index.md
configuration/event_logging/: index.html  index.md
configuration/garbage_collector/: index.html  index.md
configuration/history_manager/: index.html  index.md
configuration/lifetimes/: index.html  index.md
configuration/modules/: index.html  index.md
configuration/processing_core/: index.html  index.md
configuration/snapshots/: index.html  index.md
configuration/updater/: index.html  index.md
data_model/: index.html  index.md
docker/postgres/: Dockerfile  init-db.sh
docker/python/: Dockerfile
docker/rabbitmq/: Dockerfile  init-rmq.sh
docs/: api.md  architecture.md  data_model.md  developing.md  extending.md  gen_ref_pages.py  grafana_plugin.md  history_management.md  hooks.md  index.md  install.md  mkdocs_info.md  modules.md  scripts.md
docs/configuration/: api.md  common.md  control.md  database.md  db_entities.md  event_logging.md  garbage_collector.md  history_manager.md  index.md  lifetimes.md  modules.md  processing_core.md  snapshots.md  updater.md
docs/howto/: add-attribute.md  add-input.md  add-module.md  deploy-app.md  develop-dp3.md  extending.md  get-started.md  index.md  test-module.md
docs/stylesheets/: mermaid.css
dp3/: __init__.py  g.py  worker.py
dp3/.core_modules/: update_planner.py
dp3/api/: README.md  __init__.py  main.py
dp3/common/: .attrconvert.py  .base_module.py  __init__.py  attrconvert.py  attrspec.py  base_attrs.py  base_module.py  callback_registrar.py  config.py  context.py  control.py  datapoint.py  datatype.py  entityspec.py  mac_address.py  scheduler.py  state.py  task.py  types.py  utils.py
dp3/core/: collector.py  link_manager.py  updater.py
dp3/core_modules/: update_planner.py
dp3/database/: .record.py  __init__.py  config.py  database.py  encodings.py  exceptions.py  magic.py  schema_cleaner.py  snapshots.py
dp3/history_management/: .constants.py  .history_manager.py  __init__.py  history_manager.py  telemetry.py
dp3/scripts/: add_hashes.py  add_min_t2s.py  datapoint_log_converter.py  dummy_sender.py  migrate_snapshots.py  rmq_reconfigure.sh  script_runner.py
dp3/snapshots/: __init__.py  snapshooter.py  snapshot_hooks.py
dp3/task_processing/: __init__.py  task_distributor.py  task_executor.py  task_hooks.py  task_queue.py
dp3/template/: README.md  appctl  appsh  docker-compose.app.yml
dp3/testing/: __init__.py  assertions.py  case.py  config.py  modules.py  registrar.py
extending/: index.html
grafana_plugin/: index.html  index.md
history_management/: index.html  index.md
hooks/: index.html  index.md
howto/: index.html  index.md
howto/add-attribute/: index.html  index.md
howto/add-input/: index.html  index.md
howto/add-module/: index.html  index.md
howto/deploy-app/: index.html  index.md
howto/develop-dp3/: index.html  index.md
howto/extending/: index.html  index.md
howto/get-started/: index.html  index.md
install/: README.md  index.html  rmq_reconfigure.sh  supervisord.conf
install/supervisord.conf.d/: ecl_master.ini  workers.ini
install/template/: docker-compose.app.yml  docker-compose.yml  requirements.txt
javascripts/: mermaid.js
modules/: index.html  index.md  test_module.py
reference/: index.html
reference/SUMMARY/: index.html
reference/api/: index.html
reference/common/: index.html
reference/core/: index.html
reference/database/: index.html
reference/history_management/: index.html
reference/scripts/: index.html
reference/snapshots/: index.html
reference/task_processing/: index.html
reference/worker/: index.html
scripts/: add_ctimes.py  add_hashes.py  datapoint_log_converter.py  db_valid.py  dummy_sender.py  index.html  index.md  rmq_reconfigure.sh  run_api_test_shard.py  run_api_tests_local.sh  update_db_scheme.py
search/: search_index.json
src/: Makefile  __init__.py  check_config.py  g.py  worker.py
src/common/: AttrSpec.py  __init__.py  attrspec.py  base_module.py  config.py  entityspec.py  scheduler.py  utils.py
src/database/: database.py  record.py
src/modules/: __init__.py  base_module.py  test_module.py
src/task_processing/: __init__.py  new_task.json  put_task.py  task_distributor.py  task_executor.py  task_queue.py
stylesheets/: slate.css
tests/modules/: test_module.py  thread_module.py
tests/test_api/: common.py  test_01_datapoints.py  test_02_get_attr_value.py  test_datapoints.py  test_garbage_collector.py  test_get_attr_value.py  test_get_distinct_attr_values.py  test_get_entity_eid_data.py  test_get_entity_eids.py  test_get_history.py  test_get_value.py  test_health.py  test_raw.py  (+7 more)
(+128 files in other folders)
