[project]
name = "dp3"
version = "0.2.0"
authors = [
    { name = "Vaclav Bartos" },
    { email = "bartos@cesnet.cz" },
]
description = "Dynamic Profile Processing Platform"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.9"
dynamic = ["dependencies"]

[project.scripts]
worker = "bin.worker:main"
updater = "bin.updater:main"
update_all = "bin.update_all:main"

[project.urls]
Homepage = "https://github.com/CESNET/dp3"
Repository = "https://github.com/CESNET/dp3"
Documentation = "https://cesnet.github.io/dp3"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools]
packages = ["dp3", "bin", "api", "scripts"]

### Ruff Code Linting ##################################################################
[tool.ruff]
target-version = "py39"
extend-exclude = ["install", "docker"]
line-length = 100
show-fixes = true
select = [
    "I", # isort
    "UP", # PyUpgrade
    "F", # Pyflakes
    "E", # Pycodestyle Errors
    "W", # Pycodestyle Warnings
    "B", # Flake8 Bugbear
    "SIM", # Flake8 Simplify
    "C4", # Flake8 Comprehensions
    "PL", # PyLint
    "ISC", # Implicit str concatenation
]
ignore = [
    "PLR2004", # Magic value used in comparison
    "PLW2901", # Loop variable overwritten by assignment
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
]

[tool.ruff.per-file-ignores]
"dp3/task_processing/task_queue.py" = ["PLR0913"]
"dp3/common/callback_registrar.py" = ["PLR0913"]
"dp3/common/scheduler.py" = ["PLR0913"]

[tool.ruff.pylint]
# Most arguments in a function call.
max-args = 8