[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools >= 61",
    "setuptools_scm[toml] >= 6.2",
    "wheel"
]

[project]
name = "dp-cubed"
authors = [
    { name = "Vaclav Bartos" },
    { email = "bartos@cesnet.cz" },
]
description = "Dynamic Profile Processing Platform"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Framework :: Pydantic :: 1",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Intended Audience :: Developers",
]
requires-python = ">=3.9"
dynamic = ["version", "dependencies", "optional-dependencies"]

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"

[project.scripts]
api = "dp3.bin.api:run"
worker = "dp3.bin.worker:run"
dp3-setup = "dp3.bin.setup:run"
check = "dp3.bin.check:run"
dp3 = "dp3.bin.cli:run"
dp3-script = "dp3.scripts.script_runner:run"

[project.urls]
Homepage = "https://github.com/CESNET/dp3"
Repository = "https://github.com/CESNET/dp3"
Documentation = "https://cesnet.github.io/dp3"

[tool.setuptools.packages.find]
include = ["dp3*"]

[tool.setuptools.package-data]
dp3 = ["template/**/*"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.dynamic.optional-dependencies]
# For development - pre-commit hooks, mkdocs documentation
dev = { file = ["requirements.dev.txt"] }
# Using gunicorn for API deployment
deploy = { file = ["requirements.deploy.txt"] }
# Using the data scripts that read datapoints from files
scripts = { file = ["requirements.scripts.txt"] }

### Black Formatting ###################################################################
[tool.black]
target-version = ["py39"]
line-length = 100
extend-exclude = "/(install|docker)/"

### Ruff Code Linting ##################################################################
[tool.ruff]
target-version = "py39"
extend-exclude = ["install", "docker"]
line-length = 100
show-fixes = true

[tool.ruff.lint]
select = [
    "I", # isort
    "UP", # PyUpgrade
    "F", # Pyflakes
    "E", # Pycodestyle Errors
    "W", # Pycodestyle Warnings
    "B", # Flake8 Bugbear
    "SIM", # Flake8 Simplify
    "C4", # Flake8 Comprehensions
    "PL", # PyLint
    "ISC", # Implicit str concatenation
]
ignore = [
    "PLR2004", # Magic value used in comparison
    "PLW2901", # Loop variable overwritten by assignment
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
]

[tool.ruff.lint.per-file-ignores]
"dp3/task_processing/task_queue.py" = ["PLR0913"]
"dp3/common/callback_registrar.py" = ["PLR0913"]
"dp3/common/scheduler.py" = ["PLR0913"]

[tool.ruff.lint.pylint]
# Most arguments in a function call.
max-args = 8